# exotic-options

./: .gitignore  Dockerfile  README.md  environment.yml  main.py  pyproject.toml  requirements.in  requirements.txt  setup.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  dependencies.yml  release.yml
notebooks/: Similarity-reduction-techniques-Asian-Options.ipynb  workspace_setup.ipynb
src/: __init__.py  options.py
tests/: test_options.py
